FTS/src/main/cpp/rvr_parser/rvr_grammar.txt
# All whitespace is ignored

rvr_source ::= unit*

unit ::= heading field*
heading ::= '[' heading_type ((number_key '=' number) | (string_key '=' identifier))* ']'
heading_type ::= 'node' | 'resource'
number_key ::= 'id' | 'parent'
string_key ::= 'name' | 'type'

field ::= field_1 | field_2 | field_3 | field_4 | resource | hand
field_1 ::= ('visible' | 'custom_type') '{' bool '}'
field_2 ::= 'canvas' '{' number ',' number '}'
field_3 ::= ('scale' | 'position') '{' number ',' number ',' number '}'
field_4 ::= 'orientation' '{' number ','  number ',' number ',' number '}'
resource ::= 'resource' '{' number '}'
hand ::= 'hand' '{' side '}'

identifier ::= [A-Za-z_] [A-Za-z0-9_]*
number ::= [-]? [0-9]+ ('.' [0-9]+)?
bool ::= 'true' | 'false' 
side ::= 'left' | 'right'
